[project]
name = "falken-trace"
version = "0.2.2"
description = "Enhances traces with code metadata"
authors = [
    { name = "Baz", email = "info@baz.co" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["observability", "tracing"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "typing-extensions>=4.6.0,<5.0.0",
    "wrapt>=1.15.0,<2.0.0", # pin till ddtrace officially supports it https://github.com/DataDog/dd-trace-py/issues/14993
]

[project.urls]
repository = "https://github.com/baz-scm/falken-trace-py"
changelog = "https://github.com/baz-scm/falken-trace-py/blob/main/CHANGELOG.md"
releases = "https://github.com/baz-scm/falken-trace-py/releases"

[dependency-groups]
dev = [
    "mypy>=1.18.0,<2.0.0",
    "prek>=0.2.11,<0.3.0",
    "pytest>=8.4.0,<9.0.0",
    # integration tests
    "ddtrace>=3.9.1,<4.0.0",
    "fastapi>=0.115.12,<1.0.0",
    # For the FastAPI test client
    "httpx>=0.28.1,<1.0.0",
]

[build-system]
requires = ["uv_build~=0.9.0"]
build-backend = "uv_build"

[tool.uv]
required-version = "~=0.9.0"

[tool.uv.build-backend]
module-name = "falken_trace"
module-root = ""
source-include = ["tests/**"]

[tool.mypy]
files = "falken_trace"
local_partial_types = true # will become the new default from version 2
allow_redefinition_new = true # will become the new default from version 2
fixed_format_cache = true # new caching mechanism
strict = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "wrapt"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "E",
    "F",
    "FURB",
    "I",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PLE",
    "PLW",
    "PT",
    "PYI",
    "RUF",
    "S",
    "SIM",
    "T10",
    "TC",
    "UP",
    "W",
    "YTT",
]
ignore = ["E501"] # ruff fromat takes care of it

fixable = ["I001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ANN001", "ARG001", "S101"]
